[package]
name = "compiler-grader"
version = "0.1.0"
authors = ["SchrodingerZhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-http = "2"
actix-web-actors = "3.0.0"
log = "0.4.13"
pretty_env_logger = "0.4.0"
simd-json="*"
lazy_static="*"
serde="*"
tempfile = "3.2.0"
async-trait = "*"
anyhow = "*"
structopt = "*"
hex = "0.4.2"
sha2 = "0.9.2"
diff = "0.1.12"
chrono = "*"